# vc-notice-bot

./: README.md  pyproject.toml
src/vc_notice_bot/: bot.py  config.py  main.py
